# cookbook-rs

./: Cargo.toml  flake.nix
src/: error.rs  log.rs  main.rs  menu.rs
