[package]
name = "menu-rs"
version = "0.0.1"
authors = ["Edwin Sarver <edwin.l.sarver@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.5.0", features = ["derive", "string", "wrap_help"] }
serde = { version = "1.0.209", features = ["serde_derive"] }
serde_json = "1.0.127"
thiserror = "1.0.56"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"


